Angshu, Shruthi | #1847 | Moved over to atom feed tx manager. Upgraded atomfeed jars to 1.0.-SNAPSHOT